@@ -9,6 +9,8 @@
 	* device/lib/z180/mul.s,
 	  device/lib/z180/mulchar.s:
 	  Fix z180 multiplication support routines for new calling convention.
+	* device/lib/_memset.c:
+	  Fix library function for new calling convention.
 
 2021-07-28 Philipp Klaus Krause <pkk AT spth.de>
 
